# performance-portability

./: .gitignore
cpu/: nbody_cpu.cpp
cuda/: CMakeLists.txt  nbody_origin.cu  timer.h
cuda/src/: box_blur_cuda.cu  box_blur_local_memory_cuda.cu  lodepng.cpp  matrix_mul_cublas_cuda.cu  matrix_mul_tiling_cuda.cu  matrix_transpose_cuda.cu  nbody_cuda.cu  reduction_binary_cuda.cu  reduction_tile32_cuda.cu  sobel_filter_cuda.cu
halstead_metrics/: halstead.cpp
sampleCode/: custom_selector.cpp  dependency_5_acc.cpp  dependency_5_usm.cpp  info_sycl.cpp  nd_range_class.cpp  range_kernel.cpp  usm_device.cpp  usm_shared.cpp
script/: build_cmake.sh  conf_cmake.sh
scripts/: build_cmake.sh  conf_cmake.sh  gen_report_ncu.py  parse_img_times.py  parse_times.py  run_bench.py  run_img_filter.py
sycl/: CMakeLists.txt
sycl/include/: sycl_defines.hpp  time_ms.hpp  utils.hpp
sycl/src/: box_blur_local_memory_sycl.cpp  box_blur_sycl.cpp  class_reducer_sycl.cpp  matrix_mul_tiling_sycl.cpp  matrix_transpose_sycl.cpp  nbody_sycl.cpp  reduction_binary_sycl.cpp  reduction_subgroup_sycl.cpp  sobel_filter_sycl.cpp  vector_add_sycl.cpp
